--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,17 @@
-<header>
-    <div>
-      <h1 class="text-3xl font-bold underline">
-      Challenge IT4w
-      </h1>
-    </div>
-  <nav>
-    <ul>
+<header class="flex flex-col  sm:flex-row w-full bg-white/10 justify-between px-2">
+  <div>
+    <h1  class="text-3xl font-bold my-2">
+      <a routerLink="/">Challenge IT4w </a>
+    </h1>
+  </div>
+  <nav >
+    <ul class="flex flex-row gap-2 items-center h-full mb-2 sm:mb-0" >
       <li>
-       <a href=""> Code resource</a>
+        <a href="https://github.com/juangiovannijohn/challenge-it4w" target="_blank" class="hover:cursor-pointer hover:underline">Code resource</a>
       </li>
       <li>
-       <a href="">My Linkedin</a> 
+        <a href="https://www.linkedin.com/in/juangiovannijohn/" target="_blank" class="hover:cursor-pointer hover:underline">My Linkedin</a>
       </li>
     </ul>
   </nav>
-  </header>
+</header>
